[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chainbreaker"
dynamic = ["version"]
description = "Extract information from OSX keychain files"
license = "GPL-2.0-only"
requires-python = ">=3.8"
authors = [
    {name = "n0fate"},
]
dependencies = [
    "pycryptodome",
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
chainbreaker = "chainbreaker:main"

[tool.setuptools.dynamic]
version = {attr = "chainbreaker.version.__version__"}

[tool.setuptools.packages.find]
exclude = ["tests"]
